Base. It's getting late.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
 
     <!-- JavaScript -->
     <!-- jQuery via CDN-->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+
+    <!-- QR codes -->
+    <script type="text/javascript" src="qr.js"></script>
+
     <!-- Localisation via jquery.18n.properties to come -->
     <script type="text/javascript" src="jquery.i18n.properties-min.js"></script>
+    
     <!--[if lt IE 9]> <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
 
     <!-- Statcounter.com -->
@@ -141,6 +146,7 @@
               <hr>
               <a href="https://play.google.com/store/apps/details?id=org.mozilla.firefox" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
               <a href="https://f-droid.org/repository/browse/?fdid=org.mozilla.firefox" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="qr.gif" alt="QR code" class="download qr" id="firefox" />
             </div>
           </div>
 
