--- a/index.html
+++ b/index.html
@@ -1352,7 +1352,7 @@
           
 	  <!-- Keyboards:Notes -->
           <td class="notes">
-            We are still missing some good alternatives here. Know any? Write an <a href="support.html">email or fork the project on GitHub</a> and add your favourite FOSS cloud app via pull-request. 
+            We are still missing some good alternatives here. Know any? Write an <a href="support.html">email or fork the project on GitHub</a> and add your favourite FOSS keyboard app via pull-request. 
           </td>
 	</tr>
       </table>
