Fixed spelling and naming.

--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
 
         <!-- NewsReader:Free alternative -->
         <td>
-          <!-- OwncloudNewsReader -->
+          <!-- ownCloudNewsReader -->
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
@@ -1276,7 +1276,7 @@
 
         <!-- Navigation:Free alternative -->
         <td>
-          <!-- OSMAnd -->
+          <!-- OsmAnd -->
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
@@ -1284,9 +1284,9 @@
               </a>
             </div>
             <div class="media-Text">
-              <h2 class="eps">OSMAnd</h2>
+              <h2 class="eps">OsmAnd</h2>
               <p>
-                OSMAnd uses OpenStreetMap material, offline navigation is possible.
+                OsmAnd uses OpenStreetMap material, offline navigation is possible.
               </p>
               <ul>
                 <li>Price: Free for 10 regions (unlimited regions: 5.99 &euro;)</li>
@@ -1357,17 +1357,17 @@
 
         <!-- Keyboards:Free alternative -->
         <td>
-          <!-- Hackers Keyboard -->
+          <!-- Hacker's Keyboard -->
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="hackerskeyboard.png" alt="Hackers Keyboard" class="floss" />
+                <img src="hackerskeyboard.png" alt="Hacker's Keyboard" class="floss" />
               </a>
             </div>
             <div class="media-Text">
-              <h2 class="eps">Hackers Keyboard</h2>
+              <h2 class="eps">Hacker's Keyboard</h2>
               <p>
-                Hackers Keyboard offers support for different languags and <a href="https://play.google.com/store/apps/developer?id=Klaus+Weidner">completion support</a>. It's also great for Tab/Ctrl/Esc keys, a number bar and arrow keys, in case you are missing a hardware button.
+                Hacker's Keyboard offers support for different languags and <a href="https://play.google.com/store/apps/developer?id=Klaus+Weidner">completion support</a>. It's also great for Tab/Ctrl/Esc keys, a number bar and arrow keys, in case you are missing a hardware button.
               </p>
               <ul>
                 <li>Price: Free </li>
@@ -1435,7 +1435,7 @@
 
         <!-- Cloud:Free alternative -->
         <td>
-          <!-- Owncloud -->
+          <!-- ownCloud -->
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
@@ -1443,9 +1443,9 @@
               </a>
             </div>
             <div class="media-Text">
-              <h2 class="eps">Owncloud</h2>
+              <h2 class="eps">ownCloud</h2>
               <p>
-                Connects to an <a href="http://owncloud.org">owncloud</a> instance.
+                Connects to an <a href="http://owncloud.org">ownCloud</a> instance.
               </p>
               <ul>
                 <li>Price: 0.79 &euro;(Google Play), free(F-Droid) </li>
@@ -1518,15 +1518,15 @@
             </div>
           </div>
 
-          <!-- ZXing Barcode Scanner-->
+          <!-- Barcode Scanner-->
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="zxingbarcodescanner.png" alt="zxing barcodes canner" class="floss" />
+                <img src="barcodescanner.png" alt="barcode scanner" class="floss" />
               </a>
             </div>
             <div class="media-Text">
-              <h2 class="eps">ZXing Barcode Scanner</h2>
+              <h2 class="eps">Barcode Scanner</h2>
               <p>
                 Scans barcodes and QR-codes
               </p>
@@ -1538,7 +1538,7 @@
               <hr>
               <a href="https://play.google.com/store/apps/details?id=com.google.zxing.client.android" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
               <a href="https://f-droid.org/repository/browse/?fdid=com.google.zxing.client.android" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
-              <img src="qr.gif" alt="QR code" class="download qr" id="zxingbarcodescanner" />
+              <img src="qr.gif" alt="QR code" class="download qr" id="barcodescanner" />
             </div>
           </div>
 
