--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <p>This project uses <a href="https://jquery.org/license/">jQuery</a>, which is released under the <a href="https://jquery.org/license/">MIT License</a> and the design is largely built upon <a href="http://groundfloor.neocities.org/">Groundfloor</a> and <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a>(no license known); though heavily <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewritten by LumenTeun</a>.
       
       <h3>Proprietary services</h3>
-      <p>My hoster neocities.org doesn't allow any server side scripting like PHP or Python or databases. For that reason, I'm using some proprietary services to see what people are searching for when they go on this site and how many visitors I get in total. The services I use is <a href="http://statcounter.com">Statcounter.com</a>. I'll remove it later on. Also, as you might have seen already, I use disqus for the comments. Sorry about that. If anyone has a alternative suggestion, please <a href="support.html">contact me</a>.</p>
+      <p>My hoster neocities.org doesn't allow any server side scripting like PHP or Python or databases. As you might have seen already, I use disqus for the comments. Sorry about that. If anyone has a alternative suggestion, please <a href="support.html">contact me</a>.</p>
       <p></p>
     
     <h3>Mentioned</h3>
@@ -49,7 +49,7 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - Last update: 14 November 2013, 12:37
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - Last update: 31 December 2013, 03:48
       </p>
     </footer>
   </body>
