--- a/credits.html
+++ b/credits.html
@@ -38,7 +38,8 @@
         <td>Matthias for <a href="http://droid-break.info/#navigation">Navit</a></td>        
       </tr>
       <tr>
-        <td>LumenTeun for <a href="http://droid-break.info/#audio">VLC</a>, <a href="http://droid-break.info/#notes">Tomdroid</a>, <a href="http://droid-break.info/#browser">Firefox(download fix)</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS and countless pull requests!</a>
+        <td>LumenTeun for <a href="http://droid-break.info/#audio">VLC</a>, <a href="http://droid-break.info/#notes">Tomdroid</a>, <a href="http://droid-break.info/#browser">Firefox(download fix)</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/qrcodes">QR-codes</a> and countless pull requests!
+        
         </td>        
       </tr>
        <tr>
@@ -59,7 +60,7 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - Last update: 14 November 2013, 12:31
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - Last update: 31 December 2013, 03:47
       </p>
     </footer>
   </body>
