Added QRs for OpenDocument Reader and Tweet Lanes.

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=com.tweetlanes.android" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-
+              <img src="qr.gif" alt="QR code" class="download qr" id="tweetlanes" />
             </div>
           </div>          
 
@@ -1527,7 +1527,7 @@
               <hr>
               <a href="https://play.google.com/store/apps/details?id=at.tomtasche.reader" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
               <a href="https://f-droid.org/repository/browse/?fdid=at.tomtasche.reader" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
-              
+              <img src="qr.gif" alt="QR code" class="download qr" id="opendocumentreader" />
             </div>
           </div>
           
