--- a/index.html
+++ b/index.html
@@ -1638,6 +1638,29 @@
 
             </div>
           </div>
+          
+          <!-- Minimal Open Source Flashlight -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="mosf.png" alt="Minimal Open Source Flashlight" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Minimal Open Source Flashlight</h2>
+              <p>
+                Minimalistic approach to a flashlight: just one switch in the middle of the screen.
+              </p>
+              <ul>
+                <li>Price: Free </li>
+                <li>Min. Android version: 4.0</li>
+                <li><a href="https://github.com/repat/mosf">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://play.google.com/store/apps/details?id=de.repat.mosf" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
+
+            </div>
+          </div>          
 
           <!-- Barcode Scanner-->
           <div class="media emph-Block">
@@ -1813,15 +1836,12 @@
         CC-BY-SA 2013 by 
         <a href="http://repat.de" target="_blank">
           repat
-        </a> and 
-         <a href="http://lutic.org" target="_blank">
-          LumenTeun
         </a>
         - hosted on 
         <a href="http://neocities.org" title="neocities">
           neocities.org
         </a>
-        - Last update: 31 December 2013, 03:44.
+        - Last update: 1 January 2013, 22:06.
       </p>
       <p>
         Logos and images are trademarked by their respective companies.
