Replaced .gifs with a QR code JS library.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
     <!-- QR codes -->
+    <script type="text/javascript" src="qrcode.min.js"></script>
     <script type="text/javascript" src="qr.js"></script>
 
     <!-- Localisation via jquery.18n.properties to come -->
@@ -94,7 +95,6 @@
     <!-- Start Browser -->
     <h2><a id="browser">Browser</a><a href="#top" class="topLink">^</a></h2>
     <table>
-
       <!-- Table headers -->
       <tr>
         <th>Proprietary</th>
