Added QR for mosf.

--- a/index.html
+++ b/index.html
@@ -1658,7 +1658,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=de.repat.mosf" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-
+              <img src="qr.gif" alt="QR code" class="download qr" id="mosf" />
             </div>
           </div>          
 
