fix desc, vlc double id,couple of &'s

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Droid-Break.info - A list of free high quality alternatives to proprietary Android apps
+      Droid-Break.info - High quality alternative Android apps
     </title>
     <!-- Metadata -->
     <meta charset="utf-8">
@@ -569,7 +569,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=org.sipdroid.sipua" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-              <a href="https://f-droid.org/repository/browse/?fdfilter=sipdroid&fdid=org.sipdroid.sipua" target="_blank"><img src="fdroid.png" alt="F-Droid Repository" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=org.sipdroid.sipua" target="_blank"><img src="fdroid.png" alt="F-Droid Repository" class="download" /></a>
               <img src="qr.gif" alt="QR code" class="download qr" id="sipdroid" />
 
             </div>
@@ -754,7 +754,7 @@
               <hr>
               <a href="https://play.google.com/store/apps/details?id=org.videolan.vlc.betav7neon" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
               <a href="https://f-droid.org/repository/browse/?fdid=org.videolan.vlc" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
-              <img src="qr.gif" alt="QR code" class="download qr" id="vlc" />
+              <img src="qr.gif" alt="QR code" class="download qr" id="vlcplayer" />
             </div>
           </div>
 
@@ -996,7 +996,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=info.guardianproject.notepadbot" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-              <a href="https://f-droid.org/repository/browse/?fdfilter=notepad&fdid=info.guardianproject.notepadbot" target="_blank"><img src="fdroid.png" alt="F-Droid Repository" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=info.guardianproject.notepadbot" target="_blank"><img src="fdroid.png" alt="F-Droid Repository" class="download" /></a>
               <img src="qr.gif" alt="QR code" class="download qr" id="notecipher" />
             </div>
           </div>
@@ -1231,7 +1231,7 @@
               <hr>
               <a href="https://play.google.com/store/apps/details?id=com.nexes.manager" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>(Basic)
               <a href="https://play.google.com/store/apps/details?id=com.nexes.manager.tablet" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>(Tablet)
-              <a href="https://f-droid.org/repository/browse/?fdfilter=open%20manager&fdid=com.nexes.manager" target="_blank"><img src="fdroid.png" alt="F-Droid Repository" class="download" /></a>(Basic)
+              <a href="https://f-droid.org/repository/browse/?fdid=com.nexes.manager" target="_blank"><img src="fdroid.png" alt="F-Droid Repository" class="download" /></a>(Basic)
               <img src="qr.gif" alt="QR code" class="download qr" id="openmanager" />
             </div>
           </div>
@@ -1550,7 +1550,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=com.artifex.mupdfdemo" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-              <a href="https://f-droid.org/repository/browse/?fdfilter=mupdf&fdid=com.artifex.mupdfdemo" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=com.artifex.mupdfdemo" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="qr.gif" alt="QR code" class="download qr" id="mupdf" />
               
             </div>
@@ -1575,7 +1575,7 @@
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=org.vudroid" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-              <a href="https://f-droid.org/repository/browse/?fdfilter=vudroid&fdid=org.vudroid" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <a href="https://f-droid.org/repository/browse/?fdid=org.vudroid" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
               <img src="qr.gif" alt="QR code" class="download qr" id="vudroid" />
               
             </div>
@@ -1653,12 +1653,12 @@
               </p>
               <ul>
                 <li>Price: Free </li>
-                <li>Min. Android version: 4.0</li>
+                <li>Min. Android version: 1.0</li>
                 <li><a href="https://github.com/repat/mosf">Source code</a></li>
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=de.repat.mosf" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-              <img src="qr.gif" alt="QR code" class="download qr" id="mosf" />
+  			  <img src="qr.gif" alt="QR code" class="download qr" id="mosf" />
             </div>
           </div>          
 
