rest of the foss img

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="firefox.png" alt="Firefox" class="floss" />
+                <img src="img/foss/firefox.png" alt="Firefox" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -146,7 +146,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="tint.png" alt="Tint" class="floss" />
+                <img src="img/foss/tint.png" alt="Tint" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -170,7 +170,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="zircobrowser.png" alt="Zirco browser" class="floss" />
+                <img src="img/foss/zircobrowser.png" alt="Zirco browser" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -227,7 +227,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="tinfoil.png" alt="Tinfoil" class="floss" />
+                <img src="img/foss/tinfoil.png" alt="Tinfoil" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -252,7 +252,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="twidere.png" alt="Twidere" class="floss" />
+                <img src="img/foss/twidere.png" alt="Twidere" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -277,7 +277,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="tweetlanes.png" alt="Tweet Lanes" class="floss" />
+                <img src="img/foss/tweetlanes.png" alt="Tweet Lanes" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -326,7 +326,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="andstatus.png" alt="AndStatus" class="floss" />
+                <img src="img/foss/andstatus.png" alt="AndStatus" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -411,7 +411,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="chatsecure.png" alt="chatsecure" class="floss" />
+                <img src="img/foss/chatsecure.png" alt="chatsecure" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -437,7 +437,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="surespot.png" alt="surespot" class="floss" />
+                <img src="img/foss/surespot.png" alt="surespot" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -462,7 +462,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="textsecure.png" alt="textsecure" class="floss" />
+                <img src="img/foss/textsecure.png" alt="textsecure" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -486,7 +486,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="telegram.png" alt="telegram" class="floss" />
+                <img src="img/foss/telegram.png" alt="telegram" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -578,7 +578,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="sipdroid.png" alt="Sipdroid" class="floss" />
+                <img src="img/foss/sipdroid.png" alt="Sipdroid" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -603,7 +603,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="csipsimple.png" alt="CSipSimple" class="floss" />
+                <img src="img/foss/csipsimple.png" alt="CSipSimple" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -627,7 +627,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="linphonevideo.png" alt="Linphone" class="floss" />
+                <img src="img/foss/linphonevideo.png" alt="Linphone" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -688,7 +688,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="vanillamusic.png" alt="vanillamusic" class="floss" />
+                <img src="img/foss/vanillamusic.png" alt="vanillamusic" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -713,7 +713,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="musicplayer.png" alt="musicplayer" class="floss" />
+                <img src="img/foss/musicplayer.png" alt="musicplayer" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -736,7 +736,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="andless.png" alt="andless" class="floss" />
+                <img src="img/foss/andless.png" alt="andless" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -902,7 +902,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="k9mail.png" alt="k9mail" class="floss" />
+                <img src="img/foss/k9mail.png" alt="k9mail" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -957,7 +957,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="tomdroid.png" alt="Tomdroid" class="floss" />
+                <img src="img/foss/tomdroid.png" alt="Tomdroid" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -982,7 +982,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="oinotepad.png" alt="oi notepad" class="floss" />
+                <img src="img/foss/oinotepad.png" alt="oi notepad" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1005,7 +1005,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="notecipher.png" alt="notecipher" class="floss" />
+                <img src="img/foss/notecipher.png" alt="notecipher" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1061,7 +1061,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="owncloudnewsreader.png" alt="owncloud news reader" class="floss" />
+                <img src="img/foss/owncloudnewsreader.png" alt="owncloud news reader" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1086,7 +1086,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="feedex.png" alt="feedex" class="floss" />
+                <img src="img/foss/feedex.png" alt="feedex" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1111,7 +1111,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="redreader.png" alt="redreader" class="floss" />
+                <img src="img/foss/redreader.png" alt="redreader" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1136,7 +1136,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="ttrss-reader.png" alt="ttrss-reader" class="floss" />
+                <img src="img/foss/ttrss-reader.png" alt="ttrss-reader" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1192,7 +1192,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="oifilemanager.png" alt="oi file manager" class="floss" />
+                <img src="img/foss/oifilemanager.png" alt="oi file manager" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1216,7 +1216,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="appositedesigns.fileexplorer.png" alt="File Explorer" class="floss" />
+                <img src="img/foss/appositedesigns.fileexplorer.png" alt="File Explorer" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1239,7 +1239,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="openmanager.png" alt="open manager" class="floss" />
+                <img src="img/foss/openmanager.png" alt="open manager" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1265,7 +1265,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="ghostcommander.png" alt="Ghost Commander" class="floss" />
+                <img src="img/foss/ghostcommander.png" alt="Ghost Commander" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1321,7 +1321,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="osmand.png" alt="osmand" class="floss" />
+                <img src="img/foss/osmand.png" alt="osmand" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1346,7 +1346,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="navit.png" alt="Navit" class="floss" />
+                <img src="img/foss/navit.png" alt="Navit" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1402,7 +1402,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="hackerskeyboard.png" alt="Hacker's Keyboard" class="floss" />
+                <img src="img/foss/hackerskeyboard.png" alt="Hacker's Keyboard" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1425,7 +1425,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="anysoftkeyboard.png" alt="AnySoftKeyboard" class="floss" />
+                <img src="img/foss/anysoftkeyboard.png" alt="AnySoftKeyboard" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1480,7 +1480,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="owncloud.png" alt="owncloud" class="floss" />
+                <img src="img/foss/owncloud.png" alt="owncloud" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1535,7 +1535,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="opendocumentreader.png" alt="opendocumentreader" class="floss" />
+                <img src="img/foss/opendocumentreader.png" alt="opendocumentreader" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1584,7 +1584,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="vudroid.png" alt="vudroid" class="floss" />
+                <img src="img/foss/vudroid.png" alt="vudroid" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1609,7 +1609,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="fbreader.png" alt="fbreader" class="floss" />
+                <img src="img/foss/fbreader.png" alt="fbreader" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1695,7 +1695,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="mosf.png" alt="Minimal Open Source Flashlight" class="floss" />
+                <img src="img/foss/mosf.png" alt="Minimal Open Source Flashlight" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1718,7 +1718,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="barcodescanner.png" alt="barcode scanner" class="floss" />
+                <img src="img/foss/barcodescanner.png" alt="barcode scanner" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1742,7 +1742,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="cgeo.png" alt="cgeo" class="floss" />
+                <img src="img/foss/cgeo.png" alt="cgeo" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1766,7 +1766,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="prey.png" alt="prey" class="floss" />
+                <img src="img/foss/prey.png" alt="prey" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1789,7 +1789,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="flappycow.png" alt="flappycow" class="floss" />
+                <img src="img/foss/flappycow.png" alt="flappycow" class="floss" />
               </a>
             </div>
             <div class="media-Text">
