--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!-- JavaScript -->
     <!-- jQuery via CDN-->
@@ -554,7 +555,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="redphone.png" alt="RedPhone" class="floss" />
+                <img src="img/foss/redphone.png" alt="RedPhone" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1865,13 +1866,13 @@
       </p>
       <p>
         <a href="https://facebook.com/droidbreak" target="_blank">
-          <img src="facebook.png" alt="facebook" />
+          <i class="fa fa-facebook"></i>
         </a>
         <a href="https://twitter.com/droidbreak" target="_blank">
-          <img src="twitter.png" alt="twitter" />
+          <i class="fa fa-twitter"></i>
         </a>
         <a href="https://github.com/repat/droid-break" target="_blank">
-          <img src="github.png" alt="GitHub" />
+          <i class="fa fa-github"></i>
         </a>
       </p>
       <p>
@@ -1880,10 +1881,10 @@
           repat
         </a>
         - hosted on 
-        <a href="http://neocities.org" title="neocities">
-          neocities.org
+        <a href="http://pages.github.com" title="GitHub Pages">
+          GitHub Pages
         </a>
-        - Last update: 11 March 2014, 22:06.
+        - Last update: 17 March 2014, 01:45
       </p>
       <p>
         Logos and images are trademarked by their respective companies.
