minor html fixes

--- a/credits.html
+++ b/credits.html
@@ -6,7 +6,7 @@
       Credits - droid-break.info
     </title>
    <!-- CSS -->
-    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     
     <!-- jQuery via CDN-->
      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -60,7 +60,7 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - Last update: 31 December 2013, 03:47
+             CC-BY-SA 2013-2014 by <a href="http://repat.de">repat</a> - Last update: 17. March 2014, 01:45
       </p>
     </footer>
   </body>
