--- a/index.html
+++ b/index.html
@@ -1843,7 +1843,7 @@
     <hr>
     <!-- Links to friends -->
     <a href="https://en.wikipedia.org/wiki/List_of_free_and_open-source_Android_applications" class="friends">
-      <img src="wikipedia.png" alt="List of foss Android Apps on Wikipedia" class="friends" />
+      <img src="img/misc/wikipedia.png" alt="List of foss Android Apps on Wikipedia" class="friends" />
     </a>
     <a href="https://www.prism-break.org/" target="_blank" class="friends">
       <img src="img/misc/prismbreak.png" alt="prism break" class="friends" />
