--- a/index.html
+++ b/index.html
@@ -1560,7 +1560,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="mupdf.png" alt="mupdf" class="floss" />
+                <img src="/img/foss/mupdf.png" alt="mupdf" class="floss" />
               </a>
             </div>
             <div class="media-Text">
@@ -1635,7 +1635,7 @@
           <div class="media emph-Block">
             <div class="media-Object">
               <a href="#!" class="pic-Rounded">
-                <img src="coolreader.png" alt="coolreader" class="floss" />
+                <img src="img/foss/coolreader.png" alt="coolreader" class="floss" />
               </a>
             </div>
             <div class="media-Text">
